sfdx-source/force-app/main/default/objects/Brief__c/Brief__c.object-meta.xml
<CustomObject>
    <description>LEM-2983: Object to capture a brief of the Campaigns specific to the Merchant.</description>
    <label>Brief</label>
    <nameField>
        <displayFormat>BRF-{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Briefs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>