sfdx-source/force-app/main/default/objects/Brief__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>LEM-2983: Captures the Account with which the current Brief is associated to.</description>
    <label>ZAccount</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Briefs</relationshipLabel>
    <relationshipName>Briefs</relationshipName>
    <type>Lookup</type>
</CustomField>