sfdx-source/force-app/main/default/objects/Brief__c/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <description>LEM-3674: It is used to indicate the owner of the Account related to the Brief.</description>
    <label>ZAccount Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>