sfdx-source/force-app/main/default/objects/Brief__c/fields/Account_Owner_Val__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Val__c</fullName>
    <description>LEM-6823</description>
    <formula>IF( Agency_Opportunity_Name__c != NULL, Agency_Opportunity_Name__r.Account.Owner.FirstName+&apos; &apos;+ Agency_Opportunity_Name__r.Account.Owner.LastName,
Opportunity_Name__r.Account.Owner.FirstName+&apos; &apos;+ Opportunity_Name__r.Account.Owner.LastName)</formula>
    <inlineHelpText>Captures Account owner related to opportunity’s Account</inlineHelpText>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>