sfdx-source/force-app/main/default/objects/Brief__c/fields/Account_Val__c.field-meta.xml
<CustomField>
    <fullName>Account_Val__c</fullName>
    <description>LEM-6823
LEM-9347 - Updates for Agency Account</description>
    <formula>IF( Agency_Opportunity_Name__c != NULL,  Agency_Opportunity_Name__r.Account.Name , Opportunity_Name__r.Account.Name)</formula>
    <inlineHelpText>Captures Account Id related to opportunity</inlineHelpText>
    <label>Account</label>
    <type>Text</type>
</CustomField>