sfdx-source/force-app/main/default/objects/Brief__c/fields/AccountOwner__c.field-meta.xml
<CustomField>
    <fullName>AccountOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-5047: It is used to store the owner of the Account associated with the Brief.</description>
    <label>ZAccount Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Briefs1</relationshipName>
    <type>Lookup</type>
</CustomField>