sfdx-source/force-app/main/default/objects/Brief__c/fields/Ad_Ops_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Ad_Ops_Campaign_Name__c</fullName>
    <description>LEM-3674: It is used to indicate the Ad Ops Campaign Name.</description>
    <label>Ad Ops Campaign Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>