sfdx-source/force-app/main/default/objects/Brief__c/fields/Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes__c</fullName>
    <description>LEM-2983: It captures any additional notes related to Brief.</description>
    <inlineHelpText>Please list any additional notes you would like Ops to know for this campaign.</inlineHelpText>
    <label>Additional Notes From Sales</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>