sfdx-source/force-app/main/default/objects/Brief__c/fields/Additional_Notes_for_Ops_Setup__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes_for_Ops_Setup__c</fullName>
    <description>LEM-2983: Captures additional information related to Campaign setup.</description>
    <inlineHelpText>Please list any additional notes regarding campaign set up, reminders, etc.</inlineHelpText>
    <label>Additional Notes From Ops</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>