sfdx-source/force-app/main/default/objects/Brief__c/fields/Advertise_via_External_Media_Channels__c.field-meta.xml
<CustomField>
    <fullName>Advertise_via_External_Media_Channels__c</fullName>
    <description>LEM-2983: Captures the decision for advertising for Merchant via external media
        channels.</description>
    <label>Advertise via External Media Channels?</label>
    <inlineHelpText>Please note here if the Mx/CPG would like an external landing page created by Ad
        Ops to share with Cxs via external media channels outside of the DoorDash app</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>