sfdx-source/force-app/main/default/objects/Brief__c/fields/Agency_Netsuite_ID__c.field-meta.xml
<CustomField>
    <fullName>Agency_Netsuite_ID__c</fullName>
    <description>LEM-10467: Tracking Two Briefs as One Uniform Campaign</description>
    <label>Agency Netsuite ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>