sfdx-source/force-app/main/default/objects/Brief__c/fields/Agency_Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Agency_Opportunity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-10467: Tracking Two Briefs as One Uniform Campaign</description>
    <label>Agency Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Briefs (Agency Opportunity Name)</relationshipLabel>
    <relationshipName>Briefs1</relationshipName>
    <type>Lookup</type>
</CustomField>