sfdx-source/force-app/main/default/objects/Brief__c/fields/Agency_Quote__c.field-meta.xml
<CustomField>
    <fullName>Agency_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-10467: Tracking Two Briefs as One Uniform Campaign</description>
    <label>Agency Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Briefs (Agency Quote)</relationshipLabel>
    <relationshipName>Briefs1</relationshipName>
    <type>Lookup</type>
</CustomField>