sfdx-source/force-app/main/default/objects/Brief__c/fields/Applicable_DoorDash_Order_Types__c.field-meta.xml
<CustomField>
    <fullName>Applicable_DoorDash_Order_Types__c</fullName>
    <description>LEM-2983: Captures the order types that the campaign is associated with.</description>
    <inlineHelpText>Provide the order types (default is all 3) the campaign applies to.</inlineHelpText>
    <label>Applicable DoorDash Order Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Pickup</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>