sfdx-source/force-app/main/default/objects/Brief__c/fields/Are_All_Brief_Items_in_Campaign_Building__c.field-meta.xml
<CustomField>
    <fullName>Are_All_Brief_Items_in_Campaign_Building__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-3676: It is used to indicate if all the related Brief Items are in Campaign Building or ahead.</description>
    <label>Are All Brief Items in Campaign Building</label>
    <type>Checkbox</type>
</CustomField>