sfdx-source/force-app/main/default/objects/Brief__c/fields/Asset_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Asset_Review_Status__c</fullName>
    <description>LEM-2983: Captures the review status of the Assets by the Sales Rep.</description>
    <label>Asset Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Asset Not Required</fullName>
            </value>
            <value>
                <fullName>Asset Creation in Progress</fullName>
            </value>
            <value>
                <fullName>Asset Review in Progress</fullName>
            </value>
            <value>
                <fullName>Asset Updates Required</fullName>
            </value>
            <value>
                <fullName>Asset Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>