sfdx-source/force-app/main/default/objects/Brief__c/fields/Assets_Approved__c.field-meta.xml
<CustomField>
    <fullName>Assets_Approved__c</fullName>
    <description>LEM-2983: Asserts if the assets required for the campaign Brief have been approved or not.</description>
    <inlineHelpText>Once the Mx has approved the assets required for the campaign, mark &apos;Yes&apos;. If there are no campaign assets, mark &apos;Yes&apos;.</inlineHelpText>
    <label>Assets Approved?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>