sfdx-source/force-app/main/default/objects/Brief__c/fields/Business_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Campaign_Name__c</fullName>
    <description>LEM-2983: Captures the Business Campaign Name associated with the Brief.</description>
    <label>Business Campaign Name</label>
    <type>TextArea</type>
</CustomField>