sfdx-source/force-app/main/default/objects/Brief__c/fields/Business_ID_List__c.field-meta.xml
<CustomField>
    <fullName>Business_ID_List__c</fullName>
    <description>LEM-2983: Captures the list of Business IDs applicable for the Brief.</description>
    <inlineHelpText>Provide the applicable Business ID(s) here. If not applicable, mark N/A.</inlineHelpText>
    <label>Business ID List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>