sfdx-source/force-app/main/default/objects/Brief__c/fields/Campaign_Analysis_Complete__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Analysis_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-3674: It is used to indicate if the Campaign Analysis is complete.</description>
    <label>Campaign Analysis Complete</label>
    <type>Checkbox</type>
</CustomField>