sfdx-source/force-app/main/default/objects/Brief__c/fields/Campaign_Program__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Program__c</fullName>
    <description>LEM-2983: Captures the Campaign Program of the Brief.
LEM-9264: Sync between Opportunity and Brief/Brief Item</description>
    <inlineHelpText>Provide the campaign program here (e.g. SoDP, Fall Football). If not applicable, mark N/A.</inlineHelpText>
    <label>ZCampaign Program</label>
    <type>TextArea</type>
</CustomField>