sfdx-source/force-app/main/default/objects/Brief__c/fields/Campaign_Program_lookup__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Program_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-9264: Sync between Opportunity and Brief/Brief Item</description>
    <inlineHelpText>Provide the campaign program here (e.g. SoDP, Fall Football).</inlineHelpText>
    <label>Campaign Program</label>
    <referenceTo>Campaign_Program__c</referenceTo>
    <relationshipLabel>Briefs</relationshipLabel>
    <relationshipName>Briefs</relationshipName>
    <type>Lookup</type>
</CustomField>