sfdx-source/force-app/main/default/objects/Brief__c/fields/Campaign_TLDR__c.field-meta.xml
<CustomField>
    <fullName>Campaign_TLDR__c</fullName>
    <description>LEM-2983: Captures the summary of the Campaign associated to the current Brief.</description>
    <inlineHelpText>Provide a summary of the campaign here.</inlineHelpText>
    <label>Campaign TLDR</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>