sfdx-source/force-app/main/default/objects/Brief__c/fields/CampaignName__c.field-meta.xml
<CustomField>
    <fullName>CampaignName__c</fullName>
    <description>LEM-2983: Captures the name of the Campaign associated with the Brief.</description>
    <label>Campaign Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>