sfdx-source/force-app/main/default/objects/Brief__c/fields/Carousel_ID__c.field-meta.xml
<CustomField>
    <fullName>Carousel_ID__c</fullName>
    <description>LEM-2983: Captures the Carousel ID related to the Brief.</description>
    <label>Carousel ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>