sfdx-source/force-app/main/default/objects/Brief__c/fields/Configuration__c.field-meta.xml
<CustomField>
    <fullName>Configuration__c</fullName>
    <description>LEM-2983: Captures the configuration details associated with the Brief.</description>
    <inlineHelpText>Select whether your product requires standard or custom setup. See the Ad Ops wiki page for further guidance.</inlineHelpText>
    <label>Configuration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard (Launch Ops)</fullName>
            </value>
            <value>
                <fullName>Custom (Ad Ops)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>