sfdx-source/force-app/main/default/objects/Brief__c/fields/CRM_Iterable_Link__c.field-meta.xml
<CustomField>
    <fullName>CRM_Iterable_Link__c</fullName>
    <description>LEM-2983: Captures the Iterable Link of the CRM associated with the Brief.</description>
    <label>CRM Iterable Link</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>