sfdx-source/force-app/main/default/objects/Brief__c/fields/Custom_Reporting_Asks__c.field-meta.xml
<CustomField>
    <fullName>Custom_Reporting_Asks__c</fullName>
    <description>LEM-2983: It captures any information obtained as a part of custom reporting.</description>
    <inlineHelpText>If applicable, provide custom reporting asks.</inlineHelpText>
    <label>Custom Reporting Asks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>