sfdx-source/force-app/main/default/objects/Brief__c/fields/DD_Budget_Name__c.field-meta.xml
<CustomField>
    <fullName>DD_Budget_Name__c</fullName>
    <description>LEM-2983: Captures the budget name funding the campaign related to the Brief.</description>
    <inlineHelpText>Note that the business campaign name is equivalent to the budget name that will
        fund this campaign. It must match a business campaign name in the Promo Budget &amp;
        Forecast sheet. Note that this is common for New Vertical campaigns, though may also apply
        to Rx campaigns, etc.</inlineHelpText>
    <label>DD Funded Budget Name (Given by Finance)</label>
    <type>TextArea</type>
</CustomField>