sfdx-source/force-app/main/default/objects/Brief__c/fields/DD_Team_to_Have_CC_d_on_Reporting__c.field-meta.xml
<CustomField>
    <fullName>DD_Team_to_Have_CC_d_on_Reporting__c</fullName>
    <description>LEM-2983: Captures the email address who would received weekly reporting from DD.</description>
    <inlineHelpText>Provide the email address of the DD employees you want to receive weekly reporting</inlineHelpText>
    <label>DD Team to Have CC&apos;d on Reporting</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>