sfdx-source/force-app/main/default/objects/Brief__c/fields/Earliest_Date_for_Press_Release__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Date_for_Press_Release__c</fullName>
    <description>LEM-2983: Captures the date of press release for the Merchant.</description>
    <label>Earliest Date for Press Release</label>
    <type>Date</type>
</CustomField>