sfdx-source/force-app/main/default/objects/Brief__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>LEM-3674: It is used to indicate the latest end date from the related Brief Items.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>