sfdx-source/force-app/main/default/objects/Brief__c/fields/Engagement_Manager__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Manager__c</fullName>
    <description>LEM-2983: Captures the Engagement Manager details associated with the Brief.</description>
    <label>Engagement Manager</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>