sfdx-source/force-app/main/default/objects/Brief__c/fields/Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type__c</fullName>
    <description>LEM-18006</description>
    <inlineHelpText>Indicate the Ads Manager profile you want the campaign built within. Note: DMA = Designated Market Area (e.g. Wendy’s Southwest)</inlineHelpText>
    <label>Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Franchise</fullName>
            </value>
            <value>
                <fullName>DMA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>