sfdx-source/force-app/main/default/objects/Brief__c/fields/External_Landing_Page_Link__c.field-meta.xml
<CustomField>
    <fullName>External_Landing_Page_Link__c</fullName>
    <description>LEM-5469: Captures the External Landing Page Link.</description>
    <label>External Landing Page Link</label>
    <type>Url</type>
</CustomField>