sfdx-source/force-app/main/default/objects/Brief__c/fields/Figma_Link__c.field-meta.xml
<CustomField>
    <fullName>Figma_Link__c</fullName>
    <description>LEM-2983: Captures the Figma link.</description>
    <inlineHelpText>Provide a link to the Figma here.</inlineHelpText>
    <label>Figma Link</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>