sfdx-source/force-app/main/default/objects/Brief__c/fields/Goal_of_the_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Goal_of_the_Campaign__c</fullName>
    <description>LEM-2983: Captures the Goal of the Campaign for the current Brief.</description>
    <inlineHelpText>Provide the goal of the campaign here.</inlineHelpText>
    <label>Goal of the Campaign</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>