sfdx-source/force-app/main/default/objects/Brief__c/fields/Google_Drive_Banner_CRM_Link__c.field-meta.xml
<CustomField>
    <fullName>Google_Drive_Banner_CRM_Link__c</fullName>
    <description>LEM-2983: Captures the Drive or CRM Link for Brief associated with Banner/CRM products.</description>
    <label>Ops Asset Folder</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>