sfdx-source/force-app/main/default/objects/Brief__c/fields/Invoicing_Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Additional_Notes__c</fullName>
    <description>LEM-2983: Captures the additional information related to invoicing.</description>
    <inlineHelpText>If this campaign requires any special invoicing, please provide any additional invoicing notes here.</inlineHelpText>
    <label>Invoicing Additional Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>