sfdx-source/force-app/main/default/objects/Brief__c/fields/Is_Created_By_System__c.field-meta.xml
<CustomField>
    <fullName>Is_Created_By_System__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-3674: It is used to indicate if the Brief Item is being created by system.</description>
    <label>Is Created By System</label>
    <type>Checkbox</type>
</CustomField>