sfdx-source/force-app/main/default/objects/Brief__c/fields/Iterable_ID_s__c.field-meta.xml
<CustomField>
    <fullName>Iterable_ID_s__c</fullName>
    <description>LEM-2983: Captures the Iterable IDs related to the Brief.</description>
    <label>Iterable ID(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>