sfdx-source/force-app/main/default/objects/Brief__c/fields/JIRA_link__c.field-meta.xml
<CustomField>
    <fullName>JIRA_link__c</fullName>
    <description>LEM-2983: Captures the JIRA Link associated with the work action related to the Brief.</description>
    <inlineHelpText>If the campaign is DoorDash funded without a contract, Ad Ops to provide JIRA link here.</inlineHelpText>
    <label>JIRA link</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>