sfdx-source/force-app/main/default/objects/Brief__c/fields/Landing_Page_ID__c.field-meta.xml
<CustomField>
    <fullName>Landing_Page_ID__c</fullName>
    <description>LEM-2983: Captures the ID of the Landing Page related to the Brief.</description>
    <label>Landing Page ID</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>