sfdx-source/force-app/main/default/objects/Brief__c/fields/Link_to_Assets__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Assets__c</fullName>
    <description>LEM-2983: Captures the web link to Assets</description>
    <inlineHelpText>Add a Gdrive folder (one per Mx) to the Brand Asset folder, then add one folder per campaign to the Mx folder and link this campaign’s folder here. Follow Creative Best Practices to ensure smooth process.</inlineHelpText>
    <label>Link to Assets</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>