sfdx-source/force-app/main/default/objects/Brief__c/fields/Mx_Email_Address_for_Weekly_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Mx_Email_Address_for_Weekly_Reporting__c</fullName>
    <description>LEM-2983: Captures the email address of the Mx who would receive weekly reporting emails.</description>
    <inlineHelpText>Provide the email address of the Mx employee you want to receive weekly reporting</inlineHelpText>
    <label>Mx Email Address for Weekly Reporting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>