sfdx-source/force-app/main/default/objects/Brief__c/fields/Netsuite_ID__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_ID__c</fullName>
    <description>LEM-2983: Captures the Netsuite Id associated with the related Quote of the Brief.</description>
    <label>Netsuite ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>