sfdx-source/force-app/main/default/objects/Brief__c/fields/Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID__c</fullName>
    <description>LEM-5469: Captures the opportunity Id from opportunity object.</description>
    <formula>CASESAFEID(Opportunity_Name__r.Id)</formula>
    <label>Opportunity ID</label>
    <type>Text</type>
</CustomField>