sfdx-source/force-app/main/default/objects/Brief__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-2983: Captures the name of the Opportunity associated with the Quote.</description>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Briefs</relationshipLabel>
    <relationshipName>Briefs</relationshipName>
    <type>Lookup</type>
</CustomField>