sfdx-source/force-app/main/default/objects/Brief__c/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-2983: Captures the owner of the related Opportunity.</description>
    <label>Opportunity Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Briefs</relationshipName>
    <type>Lookup</type>
</CustomField>