sfdx-source/force-app/main/default/objects/Brief__c/fields/Primary_Routing_Queue__c.field-meta.xml
<CustomField>
    <fullName>Primary_Routing_Queue__c</fullName>
    <description>LEM-3676: Stores primary routing queue.</description>
    <label>Primary Routing Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>