sfdx-source/force-app/main/default/objects/Brief__c/fields/Primary_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Primary_Vertical__c</fullName>
    <description>LEM-5469: Captures the primary vertical from account object.</description>
    <formula>TEXT( Opportunity_Name__r.Account.Primary_Vertical__c )</formula>
    <label>Primary Vertical</label>
    <type>Text</type>
</CustomField>