sfdx-source/force-app/main/default/objects/Brief__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <description>LEM-2983: Captures the order number associated with the Brief.</description>
    <inlineHelpText>If the Advertiser has provided a PO# for the overall campaign or multiple at the product level, provide it here.</inlineHelpText>
    <label>Purchase Order #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>