sfdx-source/force-app/main/default/objects/Brief__c/fields/Q_assign_Last_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>Q_assign_Last_Assigned_Date__c</fullName>
    <defaultValue>Now()</defaultValue>
    <description>LEM-3676: Last assignment date.</description>
    <label>Q-assign Last Assigned Date</label>
    <type>DateTime</type>
</CustomField>