sfdx-source/force-app/main/default/objects/Brief__c/fields/Qassign_Last_Assigned_From_Group__c.field-meta.xml
<CustomField>
    <fullName>Qassign_Last_Assigned_From_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-3676 - This lookup indicates owner assigned by which assignment group</description>
    <label>Qassign Last Assigned From Group</label>
    <referenceTo>ortoo_qra__Assignment_Group__c</referenceTo>
    <relationshipLabel>Brief</relationshipLabel>
    <relationshipName>Brief</relationshipName>
    <type>Lookup</type>
</CustomField>