sfdx-source/force-app/main/default/objects/Brief__c/fields/SBQQ_Quote__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_Quote__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>LEM-2983: Captures the Quote related to the Brief.</description>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Briefs</relationshipLabel>
    <relationshipName>Briefs</relationshipName>
    <type>Lookup</type>
</CustomField>