sfdx-source/force-app/main/default/objects/Brief__c/fields/Signed_Contract__c.field-meta.xml
<CustomField>
    <fullName>Signed_Contract__c</fullName>
    <description>LEM-5021: It is used to store the link to the Signed Contract from the associated Quote.</description>
    <formula>HYPERLINK(SBQQ_Quote__r.Signed_Contract_link__c, SBQQ_Quote__r.Signed_Contract_link__c)</formula>
    <label>Signed Contract</label>
    <type>Text</type>
</CustomField>