sfdx-source/force-app/main/default/objects/Brief__c/fields/SP_Banner_Content_ID__c.field-meta.xml
<CustomField>
    <fullName>SP_Banner_Content_ID__c</fullName>
    <description>LEM-2983: Captures the Sponsored Products ID.</description>
    <inlineHelpText>Provide the Sponsored Products content ID here.</inlineHelpText>
    <label>Store Page Banner Content ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>