sfdx-source/force-app/main/default/objects/Brief__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>LEM-5469: Captures the stage from opportunity object.</description>
    <formula>TEXT( Opportunity_Name__r.StageName )</formula>
    <label>Stage</label>
    <type>Text</type>
</CustomField>