sfdx-source/force-app/main/default/objects/Brief__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>LEM-3674: It is used to indicate the earliest start date from the related Brief Items.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>