sfdx-source/force-app/main/default/objects/Brief__c/fields/Store_ID_List__c.field-meta.xml
<CustomField>
    <fullName>Store_ID_List__c</fullName>
    <description>LEM-2983: Captures the list of Store IDs that are applicable to the Brief.</description>
    <inlineHelpText>If the campaign will run only for a subset of store IDs within the business ID, provide a link to the list of store IDs here. If not applicable, mark N/A.</inlineHelpText>
    <label>Store ID List</label>
    <type>Url</type>
</CustomField>