sfdx-source/force-app/main/default/objects/Brief__c/fields/T_Cs__c.field-meta.xml
<CustomField>
    <fullName>T_Cs__c</fullName>
    <description>LEM-2983: Captures the Terms &amp; Conditions related to the Brief.</description>
    <label>T&amp;Cs (in text form)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>