sfdx-source/force-app/main/default/objects/Brief__c/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <description>LEM-13260-DPEI Brief Generation</description>
    <formula>TEXT(SBQQ_Quote__r.Tier__c)</formula>
    <inlineHelpText>Final Tier from Quote</inlineHelpText>
    <label>Tier</label>
    <type>Text</type>
</CustomField>